# haskell-graphic

./: .gitignore  circle.yml  graphic.cabal  haskell-graphic.cabal  run.sh  stack.yaml
src/: Main.hs
