name:                graphic
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable graphic
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , Chart
                     , Chart-cairo
                     , colour
                     , containers
                     , data-default-class
                     , dates
                     , directory
                     , hashable
                     , hashable-time
                     , hashmap
                     , lens
                     , time
                     , wreq
  default-language:    Haskell2010

